package edu.eci.cvds.sampleprj.dao.mybatis;

import edu.eci.cvds.sampleprj.dao.PersistenceException;
import edu.eci.cvds.sampleprj.dao.UsuarioDAO;
import edu.eci.cvds.samples.entities.Usuario;

public class MyBATISUsuarioDAO implements UsuarioDAO{

	public void registrarUsuario(Usuario usuario) throws PersistenceException {
		// TODO Auto-generated method stub
		
	}

	public Usuario cargarUsuario(int id) throws PersistenceException {
		// TODO Auto-generated method stub
		return null;
	}
	
	
}
