package edu.eci.cvds.sampleprj.dao.mybatis.mappers;

/**
 * 
 * @author 2128728
 *
 */

public interface UsuarioMapper {

}
